methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:1: error: method growFlowers overrides nothing
override def growFlowers() {
             ^